03-firewallSSH
#!/bin/bash

# custom SSH port
# disable SSH root
# iptables
# fail2ban

sshport=2222

if ! [ $(id -u) = 0 ]; then
   echo "Script must be run as root / sudo."
   exit 1
fi


## ssh
sed -i "s/ \?#Port 22\?/Port $sshport/" /etc/ssh/sshd_config
sed -i "s/ \?PermitRootLogin yes\?/PermitRootLogin no/" /etc/ssh/sshd_config


## iptables
tee "/etc/iptables/rules.v4" <<EOD
# Generated by iptables-save v1.4.7 on Sun May 22 01:04:58 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -f -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2222 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Sun May 22 01:04:58 2016
EOD

tee "/etc/iptables/rules.v6" <<EOD
# Drop everything IPv6
# Generated by ip6tables-save v1.6.1 on Fri Jul 26 12:32:17 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
COMMIT
# Completed on Fri Jul 26 12:32:17 2019
EOD

iptables-restore < /etc/iptables/rules.v4
ip6tables-restore < /etc/iptables/rules.v6


## fail2ban
tee "/etc/fail2ban/jail.d/sshd.conf" <<EOD
[sshd]
# To use more aggressive sshd filter (inclusive sshd-ddos failregex):
#filter = sshd-aggressive
enabled = true
banaction = iptables-allports
#port    = ssh
port    = $sshport
logpath = %(sshd_log)s
backend = %(sshd_backend)s

[sshlongterm]
# try's in 3 days bans 1 week
enabled   = true
port      = $sshport
logpath   = %(sshd_log)s
banaction = iptables-allports
maxretry  = 30
findtime  = 259200
bantime   = 608400
filter    = sshd
EOD


## reload services
systemctl reload sshd
systemctl reload fail2ban
